--- a/DesignPatterns/DesignPatterns.vcxproj
+++ b/DesignPatterns/DesignPatterns.vcxproj
@@ -76,11 +76,11 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\C Programiranje\Desktop\Desktop\domsut\DesignPatterns\DesignPatterns\externals\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\DesignPatterns\externals\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>SFML_STATIC;WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>C:\Users\C Programiranje\Desktop\Desktop\domsut\DesignPatterns\DesignPatterns\externals\bin;C:\Users\C Programiranje\Desktop\Desktop\domsut\DesignPatterns\DesignPatterns\externals\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)\DesignPatterns\externals\bin;$(SolutionDir)\DesignPatterns\externals\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-graphics-d.lib	;sfml-window-d.lib	;sfml-audio-d.lib	;sfml-network-d.lib	;sfml-system-d.lib	;%(AdditionalDependencies);opengl32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -100,13 +100,13 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\C Programiranje\Desktop\Desktop\domsut\DesignPatterns\DesignPatterns\externals\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\DesignPatterns\externals\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>SFML_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>C:\Users\C Programiranje\Desktop\Desktop\domsut\DesignPatterns\DesignPatterns\externals\bin;C:\Users\C Programiranje\Desktop\Desktop\domsut\DesignPatterns\DesignPatterns\externals\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)\DesignPatterns\externals\bin;$(SolutionDir)\DesignPatterns\externals\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-graphics.lib	;sfml-window.lib	;sfml-audio.lib	;sfml-network.lib	;sfml-system.lib	;%(AdditionalDependencies);opengl32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -126,14 +126,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="GameState.cpp" />
     <ClCompile Include="Rectangle.cpp" />
-    <ClCompile Include="Shape.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Triangle.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GameState.h" />
     <ClInclude Include="Rectangle.h" />
-    <ClInclude Include="Shape.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="Triangle.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
